# neuralhairdatagenerate

./: .gitignore  Dockerfile  README
HairNet_orient2D/Hair_Orient2D/: CMakeLists.txt  Orient2D.hpp  main.cpp
HairNet_orient2D/Hair_Orient2D/cmake/: FindFFTW.cmake  FindGLFW3.cmake
HairNet_orient2D/test_imgs/orient_img/: 1.exr  2_1.exr
HairNet_orient2D/test_imgs/orient_img_with_body/: 1.exr  2.exr
HairNet_orient2D/test_imgs/orient_img_with_body_256/: 1.exr  2.exr
Hair_generate_convdata_and_imgs/: 1.exr  1.png.exr  CMakeLists.txt  Hair_generate_convdata_and_imgs  Renderer.h  TrainingDataGenerator.h  angs_pair.json  main.cpp  readme.md
Hair_generate_convdata_and_imgs/cmake/modules/: FindGLEW.cmake
Hair_generate_convdata_and_imgs/hair/: PiecewiseStrand.cpp  PiecewiseStrand.h  PiecewiseStrands.cpp  PiecewiseStrands.h  cnpy.h
Train/: copy_data.py  log.txt
Train/src/: main.py  model.py  render.py  render_strand.py
Train/test/: strands00002_00004_10000_v0.exr  strands00002_00004_10000_v0.txt  strands00002_00004_10000_v0.vismap
